# MonteCarloGPU

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_kernels.cu
dashboard/: dashboard.html  generate_dashboard.py
docs/: METHODOLOGY.md  RESULTS.md
include/mc/: black_scholes.hpp  kernels.hpp  pricer.hpp  timer.hpp  types.hpp
ml/: README.md  dataset.py  eval_report.json  evaluate.py  infer.py  infer_report.json  metrics.json  model.py  train.py
ml/configs/: default.yaml
orchestration/: README.md
orchestration/k8s/: benchmark-job.yaml  results-pvc.yaml
orchestration/slurm/: benchmark.sbatch  sweep.sbatch
python/: benchmark.py  convergence.py  plot_results.py  requirements.txt  risk_demo.py  surface.py
python/mcgpu/: __init__.py  backtest.py  black_scholes.py  config.py  cpu_pricer.py  portfolio.py  torch_pricer.py
results/: benchmark.json  convergence.json  convergence.md
src/: black_scholes.cpp  main.cpp  pricer.cpp
src/kernels/: asian.cu  barrier.cu  european.cu  reduction.cuh
test/: CMakeLists.txt  test_asian.cpp  test_convergence.cpp  test_european.cpp  test_greeks.cpp
tests/: test_black_scholes.py  test_convergence.py  test_cpu_pricer.py  test_portfolio.py  test_torch_pricer.py
